--- a/amplify/backend/function/myapplicationsecretadynamodb/lib/nodejs/package.json
+++ b/amplify/backend/function/myapplicationsecretadynamodb/lib/nodejs/package.json
@@ -3,10 +3,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "3.276.0",
-    "@aws-sdk/lib-dynamodb": "3.276.0",
-    "@aws-sdk/smithy-client": "3.272.0",
-    "@aws-sdk/util-dynamodb": "3.276.0",
-    "@aws-sdk/types": "3.272.0"
+    "@aws-sdk/client-dynamodb": "3.294.0",
+    "@aws-sdk/client-ssm": "3.294.0",
+    "@aws-sdk/lib-dynamodb": "3.294.0",
+    "@aws-sdk/util-dynamodb": "3.294.0"
   }
 }
