--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "@aws-sdk/client-cognito-identity-provider": "^3.294.0",
+    "@aws-sdk/client-cognito-identity-provider": "3.294.0",
     "aws-serverless-express": "3.3.5",
     "body-parser": "1.17.1",
     "dotenv": "16.0.3",
